// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutHeaderToolsComponent should match the snapshot 1`] = `
<div>
  <div
    class="fr-header__tools-links"
  >
    <ul
      class="fr-btns-group"
    />
  </div>
</div>
`;

exports[`LayoutHeaderToolsComponent should match the snapshot, when OidcClient is not defined 1`] = `
<div>
  <div
    class="fr-header__menu-links"
  >
    <ul
      class="fr-btns-group"
    />
  </div>
</div>
`;

exports[`LayoutHeaderToolsComponent should match the snapshot, when OidcClient.endpoints is not defined 1`] = `
<div>
  <div
    class="fr-header__menu-links"
  >
    <ul
      class="fr-btns-group"
    />
  </div>
</div>
`;

exports[`LayoutHeaderToolsComponent should match the snapshot, when all props and config are defined 1`] = `
<div>
  <div
    class="fr-header__menu-links"
  >
    <ul
      class="fr-btns-group"
    >
      <div>
        ReturnButtonComponent
      </div>
      <li>
        <div>
          LayoutHeaderToolsAccountComponent
        </div>
      </li>
      <li>
        <div>
          LayoutHeaderToolsLogoutButton
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`LayoutHeaderToolsComponent should match the snapshot, when isMobile is true and returnButtonUrl is defined 1`] = `
<div>
  <div
    class="fr-header__tools-links"
  >
    <ul
      class="fr-btns-group"
    >
      <div>
        ReturnButtonComponent
      </div>
    </ul>
  </div>
</div>
`;

exports[`LayoutHeaderToolsComponent should match the snapshot, when isModalMenu is true 1`] = `
<div>
  <div
    class="fr-header__menu-links"
  >
    <ul
      class="fr-btns-group"
    />
  </div>
</div>
`;

exports[`LayoutHeaderToolsComponent should match the snapshot, when user is connected and endSessionUrl is defined 1`] = `
<div>
  <div
    class="fr-header__tools-links"
  >
    <ul
      class="fr-btns-group"
    >
      <li>
        <div>
          LayoutHeaderToolsAccountComponent
        </div>
      </li>
      <li>
        <div>
          LayoutHeaderToolsLogoutButton
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`LayoutHeaderToolsComponent should match the snapshot, when user is connected but endSessionUrl is not defined 1`] = `
<div>
  <div
    class="fr-header__tools-links"
  >
    <ul
      class="fr-btns-group"
    >
      <li>
        <div>
          LayoutHeaderToolsAccountComponent
        </div>
      </li>
    </ul>
  </div>
</div>
`;
